<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_budget">
        <EditTextPreference
            android:key="budget"
            android:title="@string/settings_budget_title"
            android:summary="@string/settings_budget_summary" />
        <ListPreference
            android:key="currency"
            android:title="@string/settings_currency_title"
            android:summary="@string/settings_currency_summary"
            android:dialogTitle="@string/settings_currency_dialog_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Date and time">
        <com.vergiliy.wedding.setting.DatePreference
            android:key="date"
            android:title="@string/settings_date_title"
            android:summary="@string/settings_date_summary"
            android:defaultValue="@string/settings_date_default" />
        <com.vergiliy.wedding.setting.TimePreference
            android:key="time"
            android:title="@string/settings_time_title"
            android:summary="@string/settings_time_summary"
            android:defaultValue="@string/settings_time_default" />
    </PreferenceCategory>

</PreferenceScreen>