<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_general"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_general_countdown"
            android:icon="@drawable/ic_menu_general_countdown"
            android:title="@string/activity_countdown_title" />
        <item
            android:id="@+id/menu_general_tasks"
            android:icon="@drawable/ic_menu_general_tasks"
            android:title="@string/activity_tasks_title" />
        <item
            android:id="@+id/menu_general_budget"
            android:icon="@drawable/ic_menu_general_budget"
            android:title="@string/activity_budget_title" />
        <item
            android:id="@+id/menu_general_guests"
            android:icon="@drawable/ic_menu_general_guests"
            android:title="@string/activity_guests_title" />
        <item
            android:id="@+id/menu_general_vendors"
            android:icon="@drawable/ic_menu_general_vendors"
            android:title="@string/activity_vendors_title" />
    </group>

    <group android:id="@+id/group_addition">
        <item
            android:id="@+id/menu_addition_setting"
            android:icon="@drawable/ic_menu_addition_settings"
            android:title="@string/activity_setting_title" />
    </group>

    <group android:id="@+id/group_info">
        <item android:title="@string/menu_info_title">
            <menu>
                <item
                    android:id="@+id/menu_info_about"
                    android:icon="@drawable/ic_menu_info_about"
                    android:title="@string/activity_about_title" />
                <item
                    android:id="@+id/menu_info_feedback"
                    android:icon="@drawable/ic_menu_info_feedback"
                    android:title="@string/activity_feedback_title" />
                <item
                    android:id="@+id/menu_info_rate"
                    android:icon="@drawable/ic_menu_info_rate"
                    android:title="@string/menu_info_rate" />
            </menu>
        </item>
    </group>

</menu>
