<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_complete_enable"
        android:title="@string/menu_action_payment_complete_enable"
        android:icon="@drawable/ic_menu_action_complete_enable"
        app:showAsAction="ifRoom"
        android:visible="false" />
    <item
        android:id="@+id/action_complete_disable"
        android:title="@string/menu_action_payment_complete_disable"
        android:icon="@drawable/ic_menu_action_complete_disable"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/menu_action_edit"
        android:icon="@drawable/ic_menu_action_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_action_delete"
        android:icon="@drawable/ic_menu_action_delete"
        app:showAsAction="ifRoom" />

</menu>