<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context="com.vergiliy.wedding.budget.cost.CostFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingBottom="3dp"
            android:text="@string/cost_view_name" />

        <TextView
            android:id="@+id/cost_view_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@null" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="12dp"
            android:paddingBottom="3dp"
            android:text="@string/cost_view_category" />

        <TextView
            android:id="@+id/cost_view_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@null" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="12dp"
            android:paddingBottom="3dp"
            android:text="@string/cost_view_note" />

        <TextView
            android:id="@+id/cost_view_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@null" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="12dp"
            android:paddingBottom="3dp"
            android:text="@string/cost_view_amount" />

        <TextView
            android:id="@+id/cost_view_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@null" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="12dp"
            android:paddingBottom="3dp"
            android:text="@string/cost_view_complete" />

        <TextView
            android:id="@+id/cost_view_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@null" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="12dp"
            android:paddingBottom="3dp"
            android:text="@string/cost_view_update" />

        <TextView
            android:id="@+id/cost_view_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@null" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>